<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UIpages.MainActivity"
    tools:theme="@style/Base.Theme.PopIn"
    >

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="337dp"
        android:layout_height="203dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logoDescription"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        android:textColor="?attr/colorSecondary"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <TextView
        android:id="@+id/loginPhrase"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginCatchyPhrase"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginTitle"
        app:layout_constraintStart_toStartOf="@+id/loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailInputLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="30dp"

        android:textStyle="bold"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeWidth="0dp"

        app:startIconDrawable="@drawable/account_icon"

        app:boxStrokeWidthFocused="0dp"
        app:boxBackgroundColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPhrase">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailInput"
            android:hint="@string/emailInputHint"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"

        android:textStyle="bold"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxBackgroundColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:hint="@string/passwordInputHint"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"

        android:text="@string/loginButton"
        android:textColor="?attr/colorOnBackground"
        app:cornerRadius="16dp"

        android:onClick="Login"

        app:layout_constraintEnd_toEndOf="@+id/loginTitle"

        app:layout_constraintHorizontal_bias="0.529"

        app:layout_constraintStart_toStartOf="@+id/loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <TextView
        android:id="@+id/guestContinue"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:text="@string/signUpButton"
        android:textColor="?attr/colorTertiary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginTitle"
        app:layout_constraintStart_toStartOf="@+id/loginTitle"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
